--- a/hw4.tex
+++ b/hw4.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \author{Shixiang (Adam) Yang}
+\usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
@@ -43,11 +44,11 @@ $T(n) = \Theta(f(n)) = \Theta(n^{1.5})$
 
 $a=3,b=4,k=1/2$
 
-$n^{\log_b{a} = \log_4{3}}$
+$n^{\log_b{a}} = n^{\log_4{3}}$
 
-Let $x=\log_4{3}, y = 1/2, 4^x = 3 < 4^y = 2$
+Let $x=\log_4{3}, y = 1/2, 4^x = 3 > 4^y = 2$
 
-Therefore, $x<y, n^{\log_4{3}} > \sqrt{n} = f(n)$
+Therefore, $x>y, n^{\log_4{3}} > \sqrt{n} = f(n)$
 
 $T(n)=\Theta(n^{\log_4{3}})$
 
@@ -64,7 +65,8 @@ By drawing a recurrence tree, we can find out that each layer takes $\Theta(n)$.
 
 Assume there are $k$ layers. We have: $n*(2/3)^k=1, k = \log_{3/2}{n}$.
 
-$T(n) = \Theta(n\log_{\frac{3}{2}}{n})$
+$T(n) = \Theta(n\log_{\frac{3}{2}}{n})=\Theta(n \frac{\log{n}
+}{\log{\frac{3}{2}}})=\Theta(n\log{n})$
 
 \subsection{}
 In the first layer: $\Theta(n)$
@@ -88,24 +90,24 @@ $T(n) = \Theta(n)$
 
 \section{Problem 2}
 \subsection{Problem a}
-We prove by contradiction. Assume that for $i\in [1,n-1]$, there is no such pair ($a_i, a_{i+1}$) that $a_i < a_{i+1}$ in $A$. That is, $\forall i\in[1,n+1]: a_i \geq a_{i+1}$ in $A$. Therefore, $a_1 \geq a_2 \geq a_3 ... \geq a_{n-1} \geq a_{n}, a_1 \geq a_n$. Because $a_1 < a_n$, contradiction! QED
+We prove by contradiction. Assume that for $i\in [1,n-1]$, there is no such pair ($a_i, a_{i+1}$) that $a_i < a_{i+1}$ in $A$. That is, $\forall i\in[1,n+1]: a_i \geq a_{i+1}$ in $A$. Therefore, $a_1 \geq a_2 \geq a_3 ... \geq a_{n-1} \geq a_{n}, a_1 \geq a_n$. Because $a_1 < a_n$, contradiction! Therefore, there exists at least one desired pair in A. $\square$
 \subsection{Problem b}
 \begin{algorithm}[!ht]
 \DontPrintSemicolon
-\KwInput{$A[ ]$, 1, n (we only search $A[l:u]$)}
+\KwInput{$A[ ]$, lower bound $l$, upper bound $u$ (we only search $A[l:u]$)}
   \SetKwFunction{FSub}{Find} 
     \SetKwProg{Fn}{Def}{:}{} 
       \Fn{\FSub{$A[ ]$, $l$, $u$}}{ 
     \If{$l==u$}{
-        return null; 
+        return -1;  \tcp*{can't find a pair from a single element}
     } \Else{
-          $m \leftarrow \lfloor\frac{m+n}{2}\rfloor$
+          $m \leftarrow \lfloor\frac{u+l}{2}\rfloor$
           
           \If{$A[m] < A[m+1]$}{
-            return $(A[m], A[m+1])$
+            return $m$
           } \Else {
             \If{$A[l] \geq A[m]$}{
-                return Find($A[], m, u$)
+                return Find($A[], m+1, u$)
             } \Else{
                 return Find($A[ ], l, m$)
             }
@@ -113,37 +115,84 @@ We prove by contradiction. Assume that for $i\in [1,n-1]$, there is no such pair
 
     }
       }
+    desiredPairIndex $\leftarrow$ Find($A[], 1,n$)
       \;
 
-\caption{An algorithm finding a pair ($a_i < a_{i+1}$)}
+\caption{An algorithm finding a pair ($a_i < a_{i+1}$) and output index $i$}
 \end{algorithm}
 
-\textbf{Prove of Correctness:}
+\textbf{Proof of Correctness:}
 \\\textbf{Correctness:} The output is a pair ($a_i<a_{i+1}$) for $i\in [1,n-1]$ in A. Proven in problem a, an array A with $a_1 < a_n$ must has a pair ($a_i,a_{i+1}$) such that $a_i<a_{i+1}$ on $A[1:n]$.
-\\Since the algorithm is largely dependent on the subarray we find from line 6 to 12. We explicitly choose the subarray $Sub[] = A[l:m]$ or $Sub[]=A[m+1:u]$ with size $p$ that satisfies $Sub[1] < Sub[p]$ to work on.
-\\\textbf{Lemma:} if the input array A[l:u] has $A[l] < A[u], m=\lfloor \frac{l+u}{2}\rfloor$, there always exists a subarray  $Sub[] = A[l:m]$ or $Sub[]=A[m+1:u]$ with size $p$ that satisfies $Sub[1] < Sub[p]$ and contains the desired pair for the algorithm to find.
+\\From line 6 to 12, we explicitly choose the subarray $Sub[] = A[l:m]$ or $Sub[]=A[m+1:u]$ with size $p$ that satisfies $Sub[1] < Sub[p]$ to work on.
+\\\textbf{Lemma:} if the input array A[l:u] has $A[l] < A[u], m=\lfloor \frac{l+u}{2}\rfloor$, there always exists a subarray  $Sub[] = A[l:m]$ or $Sub[]=A[m+1:u]$ with size $p$ that satisfies $Sub[1] < Sub[p]$ and contains the desired pair for the algorithm to find. In other words, the algorithm always choose the subarray that involves the desired pair.
 \\\textbf{Proof of Lemma:} To prove the lemma, we always assume that the input array $A[]$ has at least two elements because the algorithm doesn't concern finding the subarray for the array that has only one element. When the array $A[]$ only has two elements, it means we have found the element since the $A[1]<A[2]$. WLOG, let's look at the array $A[]$ indexed from $1$ to $n$, $A[1] < A[n], n>1$. In this case, $l = 1, u = n, m=\lfloor \frac{l+u}{2}\rfloor$. There are three cases here:
 \begin{enumerate}
     \item $A[m] < A[m+1]$: we don't need to concern about the subarray here since the algorithm will terminate once finding the desired pair.
     \item $A[m] \geq A[m+1]$ \textbf{and} $A[l] \geq A[m]$: because $A[m+1] \leq A[m] \leq A[l] < A[u]$, $A[m+1] < A[u]$. Therefore, the subarray $Sub[] = A[m+1:u]$ with size $p$ has $Sub[1] = A[m+1] < A[u] = Sub[p]$
     \item $A[m] \geq A[m+1]$ \textbf{and} $A[l] < A[m]$: the subarray $Sub[]=A[l:m]$ with size $p$ has $Sub[1] = A[l] < A[m] = Sub[p]$
 \end{enumerate}
-Therefore, when the size of $A[]$ is at least 2, either the algorithm terminates for finding desired pair or keeps working on a subarray $Sub[]$ that has the first element strictly less than the last element and contains the desired pair. Lemma Proved!
+Therefore, when the size of $A[]$ is at least 2, either the algorithm terminates for finding desired pair or keeps working on a subarray $Sub[]$ that has the first element strictly less than the last element and contains the desired pair. Lemma Proved! The algorithm always picks the subarray that involves the desired pair.
 \\\textbf{Theorem [Algorithm Correctness]:} If you call Find($A[ ], l, u$), it terminates, and afterwards, it returns a pair ($a_i<a_{i+1}$) for $i\in [1,n-1]$ in $A[l:u]$.
 \\By induction on $n = u-l+1$ (size of the array that we are working on)
 \\\textbf{Base Case:} n=1 (l==u), algorithm does nothing since there's only one element we are working on. We return null since there is no a pair.
 \\\textbf{Inductive Hypothesis:} Assume that the algorithm works for all array size $1, 2, ..., n-1$
 \\\textbf{Inductive Step:} We get to assume that algorithm works
 for all array sizes 1, ..., n-1 (Strong induction hypothesis.) 
-\\sizes for recursive calls:
+\\Sizes for recursive calls:
 \begin{enumerate}
     \item $m-l+1 = \lfloor \frac{l+u}{2}\rfloor - l + 1 < u-l+1=n$
-    \item $u-m+1 = \lfloor -\frac{l+u}{2}\rfloor +u + 1 < u-l+1=n$
+    \item $u-(m+1)+1 = u-\lfloor \frac{l+u}{2}\rfloor < u-l+1=n$
 \end{enumerate}
 
-The lemma tells us that when the size of input array $A$ is at least two, the algorithm always find the subarray that has the first element strictly less than the last element to work on. Because both subarrays are smaller and we only choose the subarray that contains the desired pair the work on, we can use the induction hypothesis on one of the recursive call that will terminate, and the result is the desired pair. QED
+The lemma tells us that when the size of input array $A$ is at least two, the algorithm always find the subarray that has the first element strictly less than the last element to work on. Because both subarrays are smaller and we only choose the subarray that contains the desired pair the work on, we can use the induction hypothesis on one of the recursive call that will terminate, and the result is the desired pair. $\square$
 
 \textbf{Running time analysis:}\\
 Observing the algorithm, on each level recursion of size $n$ we has another recursive call of size $n/2$ and primitive operation (comparison and assignment) that takes $\Theta(1)$. Assume the running time of algorithm with input array size of n as $T(n)$. The recurrence relation is \[T(n)=T(n/2)+\Theta(1)\]
 By master theorem, $a = 1, b = 2, \log_b{a} = \log_2{1} = 0 < 1 = f(n)$. The running time is: \[T(n) = n^{\log_b{a}}*\log{n} = n^0*\log{n} = \log{n}\]
+
+\section{Problem 3}
+\begin{algorithm}[!ht]
+\DontPrintSemicolon
+\KwInput{$a[ ]$,$b[]$, $l_a$, $u_a$, $l_b$, $u_b$ (indexed from 0 to n-1)}
+  \SetKwFunction{FSub}{FindStudent} 
+    \SetKwProg{Fn}{Def}{:}{} 
+      \Fn{\FSub{$a[ ]$,$b[]$, $l_a$, $u_a$, $l_b$, $u_b$}}{ 
+        \If{$u_a+u_b-l_a-l_b == 2$ or $4$}{
+            sort $a[l],a[u],b[l],b[u]$
+            
+            return the median of these numbers
+        } \Else{
+            $m_a \leftarrow \lfloor(u_a+l_a)/2 \rfloor$
+            
+            $m_b \leftarrow \lfloor(u_b+l_b)/2 \rfloor$
+
+            \If{$m_a<m_b$}{
+                return FindStudent($a[],b[],m_a+1,u_a,l_b,m_b$)
+            } \ElseIf{$m_b<m_a$}{
+                return FindStudent($a[],b[],l_a,m_a,m_b+1,u_b$)
+            } \Else {
+                return $a[m_a]$
+            }
+        }
+    }
+    desiredMiddleNumber $\leftarrow$ FindStudent($a[],b[],0,n,0,n$)
+      \;
+\caption{An algorithm finding "most middle" student}
+\end{algorithm}
+\textbf{Proof of Correctness:}\\
+\textbf{Correctness:} The output is a student $i$ (out
+of the $2n$ total) such that at least $n$ students had scores no higher than $i$, and at least $n$ students had scores no
+lower than $i$.\\
+From line 22 to 24, we choose different subarrays $S_a[], S_b[]$ in $a[]$ and $b[]$.\\
+\textbf{Lemma:} 
+\\\textbf{Theorem[Algorithm Correctness]:} If you call FindStudent($a[ ]$,$b[]$, $l_a$, $u_a$, $l_b$, $u_b$), it terminates, and afterwards, it returns an integer $i$ such that $n$ integers in $a[]$ and $b[]$ are no less than $i$, $n$ integers are no more than $i$.\\
+\textbf{Proof:} by induction on $n$ (total size of one of the array we are currently working on)
+\\\textbf{Base Case:} n=1, Algorithm sorts two numbers and return the median, which is the smaller number that satisfies.
+\\\textbf{Inductive Hypothesis:} Assume the theorem holds for $1,2,...,n-1$
+\\\textbf{Inductive Step:} We get to assume that the algorithm works for all $a[],b[]$ size $1,2,...,n-1$, total number of elements from $2,4,...,2n-2$ (Strong induction hypothesis)
+\\Size of recursive calls:
+\begin{enumerate}
+    \item $m_a-l_a+1+u_b-(m_b+1)+1\\= \lfloor\frac{l_a+u_a}{2}\rfloor-l_a+u_b-\lfloor\frac{l_b+u_b}{2}\rfloor+1 < u_a-l_a+r_b-l_b+2=2n$
+    \item $u_a-(m_a+1)+1+m_b-l_b+1\\= u_a-\lfloor\frac{l_a+u_a}{2}\rfloor+\lfloor\frac{l_b+u_b}{2}\rfloor-l_b+1 < u_a-l_a+r_b-l_b+2=2n$
+\end{enumerate}
 \end{document}
